2005-02-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_row_changed): 
	Don't emit a warning if a parent node is filtered out. (#164726,
	Olivier Sessink)

2005-02-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c (gtk_label_style_set): Revert the last 
	change, since gtk_widget_set_style_internal() already
	queues a resize.

2005-02-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c (gtk_label_style_set): Queue a resize, since
	fonts may have changed.  (#164128, Phil Blundell)

	* gtk/gtkaboutdialog.c (gtk_about_dialog_init) 
	(gtk_about_dialog_new): Move initialization code from _new to 
	_init.  (#168249, Murray Cumming) 

Wed Feb 23 17:34:01 2005  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_node_queue_redraw): Patch from
	jorn@nl.linux.org (Jorn Baayen) to notice changes to fixed-height
	widgets.

2005-02-23  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (update_keymap): Workaround for bug in
	MapVirtualKey(VK_DIVIDE, 0) in some Windows versions. (#142998)

Tue Feb 22 13:49:09 2005  Manish Singh  <yosh@gimp.org>

	* gtk/updateiconcache.c: #include <config.h>

2005-02-22  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-6:

	Fix #164940, patch by Ben Maurer and Tommi Komulainen.

	* gdk/gdkrgb.c (gdk_rgb_convert_565_d): Constify the "dmp" variable.
	(gdk_rgb_convert_565_d): Likewise.
	(DM_565): Made a static const precomputed array to avoid
	allocating it at runtime.
	(gdk_rgb_preprocess_dm_565): #ifdef out.

2005-02-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c: 
	* gtk/gtkclipboard.c: Fix links to freedesktop.org specs
	in the documentation.

	* gdk/x11/gdkdrawable-x11.c (_gdk_x11_have_render_with_trapezoids): 
	Set have_render_with_trapezoids to GDK_YES when we have 
	a new enough Render extension.  (#167965,Billy Biggs) 

	* gtk/gtkwindow.c (gtk_window_present): Use the timestamp of